--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -435,7 +435,7 @@
     "# Get results for the first (and only) PUB\n",
     "pub_result = result[0]\n",
     "print(\n",
-    "    f\"First ten results for the 'meas' output register: {pub_result.data.meas.get_memory()[:10]}\"\n",
+    "    f\"First ten results for the 'meas' output register: {pub_result.data.meas.get_bitstrings()[:10]}\"\n",
     ")"
    ]
   },
