Change Dedicated Service to On-prem

--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -19,7 +19,7 @@ You can continue to use [IBM Quantum Platform Classic](https://quantum.ibm.com/)
 
 Open and Pay-as-you-go Standard Plan users are encouraged to create an account and start using the new platform as soon as possible.
 
-Premium Plan, Dedicated Service, and Startup Program users should not create a new account yet and should wait to receive migration guidance from their administrators in the coming weeks.
+Premium Plan, On-prem, and Startup Program users should not create a new account yet and should wait to receive migration guidance from their administrators in the coming weeks.
 
 ## Benefits
 
@@ -64,7 +64,7 @@ Jobs that were run on IBM Quantum Platform Classic will not be available after t
 </Admonition>
 
 * Open users should save any workloads data from the classic platform prior to that date by following the steps in the [Save and retrieve jobs](/docs/guides/save-jobs) guide.
-* Premium Plan, Dedicated Service, and Startup Program users should wait to receive  guidance from their administrators regarding whether to download historical data.
+* Premium Plan, On-prem, and Startup Program users should wait to receive  guidance from their administrators regarding whether to download historical data.
 
 <span id="onboard"></span>
 ### Onboard
