--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -59,7 +59,7 @@ This plan is recommended for those who want to execute a strategic quantum roadm
 
 ## On-Prem Plan
 
-Access an entirely dedicated quantum system that is serviced and maintained by IBM Quantum.
+Access an entirely dedicated on-premises quantum system that is serviced and maintained by IBM Quantum.
 
 This service is recommended for those who are exploring classical quantum algorithms and applications and need high control over their resources and data. [Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to learn more.
 
