--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -11,9 +11,9 @@ This guide describes how, why, and when to transition to the [new version of IBM
 If you have been invited by your organization to join a **Premium Plan account:** 
 - Be sure you have accepted the invitation you received by email, and have created your user ID on IBM Cloud. (If you already have an IBM Cloud account associated with the invited email address, there is no need to create a new user ID.) 
 
-- You have already been added to an instance in your organization's account, so your next step is to [find your access credentials](#access-credentials), as detailed in the "Set up your IBM Cloud account" guide.
+- You have already been added to an instance in your organization's account, so your next step is to [find your access credentials](/docs/guides/cloud-setup#access-credentials), as detailed in the "Set up your IBM Cloud account" guide.
 
--If you have not yet installed Qiskit, start with the [Introduction to Qiskit](/docs/guides/index) guide.
+- If you have not yet installed Qiskit, start with the [Introduction to Qiskit](/docs/guides/index) guide.
 </Admonition>
 
 Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes to the new platform on the [Latest updates page,](/docs/guides/latest-updates) which is updated every two weeks.
