adds MPF tutorial (#3331)
Adds multiproduct formula tutorial

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -101,6 +101,8 @@ Workload optimization focuses on either efficient orchestration of classical and
 
 Addons enable advanced circuit manipulation, such as cutting, backpropagating observables, or approximating circuits, that allow users to sidestep hardware limitations at the cost of increased classical compute overhead.
 
+* [Multi-product formulas to reduce Trotter error](/docs/tutorials/multi-product-formula)
+
 * [Approximate quantum compilation for time evolution circuits](/docs/tutorials/approximate-quantum-compilation-for-time-evolution)
 
 * [Operator backpropagation (OBP) for estimation of expectation values](/docs/tutorials/operator-back-propagation)
