feedback from Kevin

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -27,7 +27,7 @@ Your user account is associated with one or more [instances](./instances) that g
 
 1. Before setting up with IBM Cloud, ensure you are working in an active Python environment with the [Qiskit SDK and Qiskit Runtime installed](/docs/guides/install-qiskit#local).
 
-1. **Premium Plan users only, who have been invited by their organization to join an account:** Be sure you have accepted the invitation you received by email, and have created your user ID on IBM Cloud. (If you already have an IBM Cloud account associated with the invited email address, there is no need to create a new user ID.) You have already been added to an instance in your organization's account, so you can skip the "Create an instance" step and go straight to [Find your access credentials](#access-credentials).
+1. **Users who have been invited by their organization to join an account:** Be sure you have accepted the invitation you received by email, and have created your user ID on IBM Cloud. (If you already have an IBM Cloud account associated with the invited email address, there is no need to create a new user ID.) You have already been added to an instance in your organization's account, so you can skip the "Create an instance" step and go straight to [Find your access credentials](#access-credentials).
 
 1. If you do not already have one, set up an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
    <Admonition type="note">
