--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -78,7 +78,6 @@
     "| problem  | `str` or `SparsePauliOp` | One of the representations listed under \"Accepted problem formats\"                                                                                                                                  | Yes | N/A   |`Poly(2.0*n[0]*n[1] + 2.0*n[0]*n[2] - 3.13520241298341*n[0] + 2.0*n[1]*n[2] - 3.14469748506794*n[1] - 3.18897660121566*n[2] + 6.0, n[0], n[1], n[2], domain='RR')` |\n",
     "| problem_type  | `str`                   | Name of the problem class; only used for graph  and spin chain problem definitions, which are limited to \"maxcut\" or \"spin_chain\"; not required for arbitrary objective function problem definitions | No      | `None`| `\"maxcut\"`      |\n",
     "| backend_name  | `str`                   | Name of the backend to use                                                                                                                                                                          | No  | Least busy backend that your instance has access to    | `\"ibm_fez\"`      |\n",
-    "| instance  | `str`                   | The hub/group/project to use                                                                                                                                                                        | No   | A Premium access instance is randomly chosen if your account has access to multiple instances   | `\"hub/group/project\"`      |\n",
     "| options  | `dict`                  | Input options, including the following: (Optional) `session_id`: `str`; default behavior creates a new Session                                                                                      | No | `None`    | `{\"session_id\": \"cw2q70c79ws0008z6g4g\"}`     |\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
@@ -87,7 +86,6 @@
     "| problem  | `str` or `SparsePauliOp` | One of the representations listed under \"Accepted problem formats\"                                                                                                                                  | Yes | N/A   |`Poly(2.0*n[0]*n[1] + 2.0*n[0]*n[2] - 3.13520241298341*n[0] + 2.0*n[1]*n[2] - 3.14469748506794*n[1] - 3.18897660121566*n[2] + 6.0, n[0], n[1], n[2], domain='RR')` |\n",
     "| problem_type  | `str`                   | Name of the problem class; only used for graph  and spin chain problem definitions, which are limited to \"maxcut\" or \"spin_chain\"; not required for arbitrary objective function problem definitions | No      | `None`| `\"maxcut\"`      |\n",
     "| backend_name  | `str`                   | Name of the backend to use                                                                                                                                                                          | No  | Least busy backend that your instance has access to    | `\"ibm_fez\"`      |\n",
-    "| instance  | `str`                   | The cloud resource name of the instance to use                                                                                                                                                                        | No   | A Premium access instance is randomly chosen if your account has access to multiple instances   | `\"CRN\"`      |\n",
     "| options  | `dict`                  | Input options, including the following: (Optional) `session_id`: `str`; default behavior creates a new Session                                                                                      | No | `None`    | `{\"session_id\": \"cw2q70c79ws0008z6g4g\"}`     |\n",
     "</CloudContent>\n",
     "**Accepted problem formats:**\n",
@@ -177,7 +175,11 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog()\n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_cloud\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\",\n",
+    ")\n",
     "\n",
     "# Access Function\n",
     "solver = catalog.load(\"q-ctrl/optimization-solver\")"
@@ -297,7 +299,6 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "instance = service.active_account()[\"instance\"]\n",
     "backend_name = service.least_busy().name"
    ]
   },
@@ -312,7 +313,6 @@
     "maxcut_job = solver.run(\n",
     "    problem=problem_as_str,\n",
     "    problem_type=\"maxcut\",\n",
-    "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_fez\"\n",
     ")"
    ]
@@ -536,7 +536,6 @@
     "# Solve the problem\n",
     "mvc_job = solver.run(\n",
     "    problem=srepr(cost_function),\n",
-    "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_fez\"\n",
     ")"
    ]
