use LegacyContent in q-ctrl-performance-management.ipynb

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -129,11 +129,16 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
+    "<LegacyContent>\n",
+    "catalog = QiskitFunctionsCatalog()\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
     "catalog = QiskitFunctionsCatalog(\n",
     "    channel=\"ibm_cloud\",\n",
     "    instance=\"USER_CRN\",\n",
     "    token=\"USER_API_KEY\",\n",
     ")\n",
+    "</CloudContent>"
     "\n",
     "# Access Function\n",
     "perf_mgmt = catalog.load(\"q-ctrl/performance-management\")"
@@ -257,6 +262,9 @@
     "qctrl_estimator_job = perf_mgmt.run(\n",
     "    primitive=\"estimator\",\n",
     "    pubs=estimator_pubs,\n",
+    "<LegacyContent>\n",
+    "    instance=instance,\n",
+    "</LegacyContent>\n",
     "    backend_name=backend_name,\n",
     ")"
    ]
@@ -364,7 +372,7 @@
     "| Name  | Type  | Description | Required | Default  | Example |\n",
     "|------|------|----------|----------|-----------|-----------|\n",
     "| pubs       | `QctrlEstimatorPubLike` or `list[QctrlEstimatorPubLike]` | One or more tuples containing the inputs listed under `EstimatorPubLike` components   | Yes   | N/A   | `(circuit, observables, parameter_values)`   |\n",
-    "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
+    "| instance | `str` | The hub/group/project to use in that format | No | A Premium access instance is randomly chosen if your account has access to multiple instances | `\"<hub1/group1/project1>\"` |\n",    "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
@@ -495,6 +503,9 @@
     "qctrl_sampler_job = perf_mgmt.run(\n",
     "    primitive=\"sampler\",\n",
     "    pubs=sampler_pubs,\n",
+    "<LegacyContent>\n",
+    "    instance=instance,\n",
+    "</LegacyContent>\n",
     "    backend_name=backend_name,\n",
     ")"
    ]
@@ -663,6 +674,7 @@
     "| Name       | Type            | Description | Required | Default | Example |\n",
     "|------------|---------------|------------------|----------|----------|--------------------|\n",
     "| pubs       | `QctrlSamplerPubLike` or `list[QctrlSamplerPubLike]`   | One or more tuples containing the inputs listed under `SamplerPubLike` components     | Yes      | N/A | `(circuit, parameter_values)`            |\n",
+    "| instance | `str` | The hub/group/project to use in that format | No | A Premium access instance is randomly chosen if your account has access to multiple instances | `\"hub/group/project\"` |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
     "</LegacyContent>\n",
