added linked python files, the special case ones we discussed

--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -485,6 +485,8 @@
    "id": "b211c7f6-7ef4-444d-84f9-bfe4b80dda5a",
    "metadata": {},
    "source": [
+    "This [example molecule notebook](https://ibm.box.com/shared/static/59c2kjqefvjy5wy5lct099thr4y0ry8c.zip) shows the setup and Hamiltonians for several molecules of varying complexity; with a little modification, this should enable you to examine most small molecules.\n",
+    "\n",
     "Let's just briefly note two important points to consider when constructing the fermionic operators for a molecule. As the molecule type changes, the symmetry will change. Similarly, the number of orbitals with various symmetries, like the cylindrically symmetric \"A1\", will change. These changes are evident even with the simple extension to LiH, as seen here:"
    ]
   },
@@ -752,7 +754,7 @@
    "source": [
     "4. Third-Party Software\n",
     "\n",
-    "There are several software packages developed for quantum chemistry, some offering multiple mappers and tools for restricting active spaces. The steps described above are general and apply to 3rd party software as well. But this other software may return Hamiltonians in a format that is not accepted by Qiskit. This is the case, for example, for [OpenFermion](https://quantumai.google/openfermion) and for [Tangelo](https://goodchemistry.com/tangelo/). Both of those return Hamiltonians of the form:\n",
+    "There are several software packages developed for quantum chemistry, some offering multiple mappers and tools for restricting active spaces. The steps described above are general and apply to 3rd party software as well. But this other software may return Hamiltonians in a format that is not accepted by Qiskit. For example, some software returns Hamiltonians of the form:\n",
     "\n",
     "H = -0.042 [] + -0.045 [X0 X1 Y2 Y3] + ... + 0.178 [Z0] + ... + 0.176 [Z2 Z3] + -0.243 [Z3]"
    ]
@@ -805,6 +807,8 @@
    "id": "0fe58207-451d-4bfa-8f2d-8969b1a48cfa",
    "metadata": {},
    "source": [
+    "Further, [this Python notebook](https://ibm.box.com/s/fh3xele1e7k0nrgd1imivvq52hy3wz9c) contains complete sample code for migrating Hamiltonians from other software workflows into Qiskit, including the conversion above.\n",
+    "\n",
     "You should now have an arsenal of tools for obtaining the Hamiltonian you need to perform quantum chemistry calculations on IBM Quantum Systems."
    ]
   }
