--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -7,13 +7,13 @@ description: Migrate to using the upgraded IBM Quantum Platform for Open users
 
 This guide describes how, why, and when to transition to the [new version of IBM Quantum Platform,](https://quantum.cloud.ibm.com/) which is now available in early access mode.
 
-<Admonition type="note">
-**If you have been invited by your organization to join an account:** 
+<Admonition type="note" title="Users with email invitations for their organization's account">
+If you have been invited by your organization to join an account:
 - Be sure you have accepted the invitation you received by email, and have created your user ID on IBM Cloud. (If you already have an IBM Cloud account associated with the invited email address, there is no need to create a new user ID.) 
 
 - You have already been added to an instance in your organization's account, so your next step is to [find your access credentials](/docs/guides/cloud-setup#access-credentials), as detailed in the "Set up your IBM Cloud account" guide.
 
-- If you have not yet installed Qiskit, start with the [Introduction to Qiskit](/docs/guides/index) guide.
+- If you have not yet installed Qiskit, start with the [Introduction to Qiskit](/docs/guides) guide.
 </Admonition>
 
 Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes to the new platform on the [Latest updates page,](/docs/guides/latest-updates) which is updated every two weeks.
@@ -22,7 +22,7 @@ You can continue to use [IBM Quantum Platform Classic](https://quantum.ibm.com/)
 
 ## When should I make the transition?
 
-<Admonition type="note">
+<Admonition type="note" title="New users">
 If you are a new user, ignore this guide and start with the [Introduction to Qiskit](/docs/guides/index) guide.
 </Admonition>
 
