Clarity for clients joining an account via invite (#3428)
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -26,6 +26,9 @@ Your user account is associated with one or more [instances](./instances) that g
 ## Set up to use IBM Cloud
 
 1. Before setting up with IBM Cloud, ensure you are working in an active Python environment with the [Qiskit SDK and Qiskit Runtime installed](/docs/guides/install-qiskit#local).
+
+1. **Users who have been invited by their organization to join an account:** Be sure you have accepted the invitation you received by email and have created your user ID on IBM Cloud. If you already have an IBM Cloud account associated with the invited email address, there is no need to create a new user ID. You can skip the "Create an instance" step and go straight to [Find your access credentials](#access-credentials), because you have already been added to an instance by your organization.
+
 1. If you do not already have one, set up an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
    <Admonition type="note">
    You can have multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
@@ -53,7 +56,7 @@ Your user account is associated with one or more [instances](./instances) that g
           If you are an administrator who needs to set up Qiskit Runtime on Cloud for your organization, refer to [Plan Qiskit Runtime for an organization](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-considerations-set-up-runtime).
         </Admonition>
 
-1. Find your access credentials.
+1. Find your access credentials.<span id="access-credentials"></span>
     1. Find your API key. From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication.
     2. Optional: Find your CRN from the Instances section of the dashboard. Click the icon to copy your CRN for the instance you want to use, then save it in a secure location so you can use it to identify the instance.
 
