--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -129,7 +129,11 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog()\n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_cloud\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\",\n",
+    ")\n",
     "\n",
     "# Access Function\n",
     "perf_mgmt = catalog.load(\"q-ctrl/performance-management\")"
@@ -239,7 +243,6 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "instance = service.active_account()[\"instance\"]\n",
     "backend_name = service.least_busy().name"
    ]
   },
@@ -254,7 +257,6 @@
     "qctrl_estimator_job = perf_mgmt.run(\n",
     "    primitive=\"estimator\",\n",
     "    pubs=estimator_pubs,\n",
-    "    instance=instance,\n",
     "    backend_name=backend_name,\n",
     ")"
    ]
@@ -370,7 +372,6 @@
     "| Name  | Type  | Description | Required | Default  | Example |\n",
     "|------|------|----------|----------|-----------|-----------|\n",
     "| pubs       | `QctrlEstimatorPubLike` or `list[QctrlEstimatorPubLike]` | One or more tuples containing the inputs listed under `EstimatorPubLike` components   | Yes   | N/A   | `(circuit, observables, parameter_values)`   |\n",
-    "| instance   | `str`   | The compute resource number of the instance to use in that format  | No  | A Premium access instance is randomly chosen if your account has access to multiple instances | `\"CRN\"`     |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
     "</CloudContent>\n",
@@ -495,7 +496,6 @@
     "qctrl_sampler_job = perf_mgmt.run(\n",
     "    primitive=\"sampler\",\n",
     "    pubs=sampler_pubs,\n",
-    "    instance=instance,\n",
     "    backend_name=backend_name,\n",
     ")"
    ]
@@ -672,7 +672,6 @@
     "| Name       | Type            | Description | Required | Default | Example |\n",
     "|------------|---------------|------------------|----------|----------|--------------------|\n",
     "| pubs       | `QctrlSamplerPubLike` or `list[QctrlSamplerPubLike]`   | One or more tuples containing the inputs listed under `SamplerPubLike` components     | Yes      | N/A | `(circuit, parameter_values)`            |\n",
-    "| instance   | `str`     | The cloud resource name to use in that format        | No | A Premium access instance is randomly chosen if your account has access to multiple instances     | `\"CRN\"`   |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
     "</CloudContent>\n",
