add new get-started section

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -24,20 +24,13 @@ The tutorials highlight techniques where repeated sampling enables estimation of
 
 * [Sample-based quantum diagonalization of a chemistry Hamiltonian](/docs/tutorials/sample-based-quantum-diagonalization)
 
-* [Improving energy estimation of a fermionic lattice model with SQD](/docs/tutorials/sample-based-krylov-quantum-diagonalization)
-
-* [Compute dissociation curves for strong coupling systems with QunaSys QSCI](/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci)
+* [Sample-based quantum diagonalization of a fermionic lattice model](/docs/tutorials/sample-based-krylov-quantum-diagonalization)
 
 * [Quantum approximate optimization algorithm](/docs/tutorials/quantum-approximate-optimization-algorithm)
 
 * [Advanced techniques for QAOA](/docs/tutorials/advanced-techniques-for-qaoa)
 
 * [Pauli Correlation Encoding to reduce Maxcut requirements](/docs/tutorials/pauli-correlation-encoding-for-qaoa)
-
-* [Higher-order binary optimization with Q-CTRL's Optimization Solver](/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver)
-
-* [Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum](/docs/tutorials/global-data-quantum-optimizer)
-
 
 </details>
 
@@ -50,8 +43,6 @@ These tutorials focus on estimating physically meaningful quantities, such as en
 
 * [Nishimori phase transition](/docs/tutorials/nishimori-phase-transition)
 
-* [Dissociation PES curves with Qunova HiVQE](/docs/tutorials/qunova-hivqe)
-
 * [Variational quantum eigensolver](/docs/tutorials/variational-quantum-eigensolver)
 
 * [Ground state energy estimation of the Heisenberg chain with VQE](/docs/tutorials/spin-chain-vqe)
@@ -60,20 +51,16 @@ These tutorials focus on estimating physically meaningful quantities, such as en
 
 * [CHSH inequality](/docs/tutorials/chsh-inequality)
 
-* [Model a flowing non-viscous fluid using QUICK-PDE](/docs/tutorials/colibritd-pde)
-
 </details>
 
 <details>
-  <summary>**Fault tolerant algorithms**</summary>
+  <summary>**Fault-tolerant algorithms**</summary>
 
 This section features algorithms with well-defined theoretical guarantees that are designed to run on future error-corrected quantum hardware. The circuits or sampling overhead for these algorithms scale in a manner that is not depth-efficient and are thereby are more likely to demonstrate quantum advantage when fault-tolerant quantum computers exist. These tutorials illustrate how the methods operate in idealized settings and demonstrate small scale examples.
 
 * [Grover's algorithm](/docs/tutorials/grovers-algorithm)
 
 </details>
-
-
 
 ## Leverage Qiskit capabilities
 
@@ -97,7 +84,25 @@ Workload optimization focuses on either efficient orchestration of classical and
 </details>
 
 <details>
-  <summary>**Addons**</summary>
+<summary>**Qiskit Functions**</summary>
+
+* [Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum](/docs/tutorials/global-data-quantum-optimizer)
+
+
+* [Error mitigation with the IBM Circuit function](/docs/tutorials/error-mitigation-with-qiskit-functions)
+
+* [Higher-order binary optimization with Q-CTRL's Optimization Solver](/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver)
+
+* [Model a flowing non-viscous fluid using QUICK-PDE](/docs/tutorials/colibritd-pde)
+
+* [Compute dissociation curves for strong coupling systems with QunaSys QSCI](/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci)
+
+* [Dissociation PES curves with Qunova HiVQE](/docs/tutorials/qunova-hivqe)
+
+</details>
+
+<details>
+  <summary>**Qiskit addons**</summary>
 
 Addons enable advanced circuit manipulation, such as cutting, backpropagating observables, or approximating circuits, that allow users to sidestep hardware limitations at the cost of increased classical compute overhead.
 
@@ -124,8 +129,6 @@ Error mitigation addresses the challenge of noise without full fault tolerance b
 * [Utility-scale error mitigation with probabilistic error amplification](/docs/tutorials/probabilistic-error-amplification)
 
 * [Combine error mitigation options with the Estimator primitive](/docs/tutorials/combine-error-mitigation-techniques)
-
-* [Error mitigation with the IBM Circuit function](/docs/tutorials/error-mitigation-with-qiskit-functions)
 
 * [Real-time benchmarking for qubit selection](/docs/tutorials/real-time-benchmarking-for-qubit-selection)
 
