move hello world and all assoc links

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -229,6 +229,6 @@ curl -X 'GET' \
 <Admonition type="tip" title="Recommendations">
   -  [Overview of available plans.](plans-overview)
   -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
-  -  Follow the steps in [Hello world](hello-world) to write and run a quantum program.
+  -  Follow the steps in [Hello world](/docs/tutorials/hello-world) to write and run a quantum program.
   -  Try a [tutorial](https://learning.quantum.ibm.com/catalog/tutorials) in IBM Quantum Learning.
 </Admonition>
