--- a/docs/guides/upgrade-from-open.mdx
+++ b/docs/guides/upgrade-from-open.mdx
@@ -51,7 +51,7 @@ It is recommended that you set up a [cost limit](/docs/guides/manage-cost#cost-l
 <Admonition type="tip" title="Recommendations">
   -  [Manage cost](manage-cost) when using the Standard Plan.
   -  Learn about the available [plans.](plans-overview)
-  -  Follow the steps in [Hello world](hello-world) to write and run a quantum program.
+  -  Follow the steps in [Hello world](/docs/tutorials/hello-world) to write and run a quantum program.
   -  [Get started with IBM Quantum on Cloud.](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-get-started)
   -  Try a [tutorial](https://learning.quantum.ibm.com/catalog/tutorials) in IBM Quantum Learning.
 </Admonition>
