--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -9,10 +9,16 @@ Use these tutorials to learn how to apply Qiskit to common quantum computing use
 - The section on workflows toward advantage contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer. 
 - The section on Qiskit capabilities contains examples that use the latest and most advanced techniques in the Qiskit ecosystem to improve part or the whole of a particular workflow.
 
+## Get started
+
+* Overview
+* [Hello world](/docs/tutorials/hello-world)
+* [Variational quantum eigensolver](/docs/tutorials/variational-quantum-eigensolver)
+* [CHSH inequality](/docs/tutorials/chsh-inequality)
 
 ## Explore workflows toward advantage
 
-Tutorials in this section cover large scale demonstrations of quantum algorithms.
+Tutorials in this section cover large-scale demonstrations of quantum algorithms.
 
 
 <details>
