--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -754,7 +754,7 @@
    "source": [
     "4. Third-Party Software\n",
     "\n",
-    "There are several software packages developed for quantum chemistry, some offering multiple mappers and tools for restricting active spaces. The steps described above are general and apply to 3rd party software as well. But this other software may return Hamiltonians in a format that is not accepted by Qiskit. For example, some software returns Hamiltonians of the form:\n",
+    "There are several software packages developed for quantum chemistry, some offering multiple mappers and tools for restricting active spaces. The steps described above are general and apply to third-party software as well. But this other software may return Hamiltonians in a format that is not accepted by Qiskit. For example, some software returns Hamiltonians of the form:\n",
     "\n",
     "H = -0.042 [] + -0.045 [X0 X1 Y2 Y3] + ... + 0.178 [Z0] + ... + 0.176 [Z2 Z3] + -0.243 [Z3]"
    ]
