--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -809,7 +809,7 @@
    "source": [
     "Further, [this Python notebook](https://ibm.box.com/s/fh3xele1e7k0nrgd1imivvq52hy3wz9c) contains complete sample code for migrating Hamiltonians from other software workflows into Qiskit, including the conversion above.\n",
     "\n",
-    "You should now have an arsenal of tools for obtaining the Hamiltonian you need to perform quantum chemistry calculations on IBM Quantum Systems."
+    "You should now have an arsenal of tools for obtaining the Hamiltonian you need to perform quantum chemistry calculations on IBM quantum computers."
    ]
   }
  ],
