Corrected language around downloads, avoiding the words please and here

--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -764,7 +764,7 @@
    "id": "8fa9546f-1cb2-4e4d-816f-8ee630b7e133",
    "metadata": {},
    "source": [
-    "Note in particular that the gates are numbered, and identity operators are not shown. This is in contrast to Hamiltonians used in Qiskit, which would write the term [Z2 Z3] as \"IIZZ\" (qubits 0 and 1 being acting on by the identity operator, qubits 2 and 3 being acted on by the Z operator).\n",
+    "Note in particular that the gates are numbered, and identity operators are not shown. This is in contrast to Hamiltonians used in Qiskit, which would write the term [Z2 Z3] as \"ZZII\" (qubits 0 and 1 being acting on by the identity operator, qubits 2 and 3 being acted on by the Z operator, ordered with qubit 0 furthest to the right).\n",
     "\n",
     "To accommodate any existing workstreams you have, the code block below converts from one syntax to the other. The function `convert_openfermion_to_qiskit` takes as its arguments a Hamiltonian generated in OpenFermion or Tangelo (and already mapped onto Pauli operators using any available mapper), and the number of qubits needed for the molecule."
    ]
