--- a/learning/courses/utility-scale-quantum-computing/grovers-algorithm.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/grovers-algorithm.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Atsushi Matsuo (May 10, 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/shared/static/3s99zptw6c7nrfzmneogs4y7ezrx5nbh.zip) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/3s99zptw6c7nrfzmneogs4y7ezrx5nbh.zip) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 2 seconds.*\n",
     "\n",
