--- a/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Toshinari Itoko (21 June 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/shared/static/0hvvgr1gnwx64x2ukgk04sss6sxc4zko.zip) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/0hvvgr1gnwx64x2ukgk04sss6sxc4zko.zip) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 15 s.*\n",
     "\n",
