--- a/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Kifumi Numata (26 Apr 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/shared/static/ws8x00xu0pksjzixyyspxzrilvt36iff.zip) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/ws8x00xu0pksjzixyyspxzrilvt36iff.zip) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 10 seconds.*\n",
     "\n",
