--- a/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Takashi Imamichi (24 May 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/s/blnffu0pd7yzxarq3zc3w0jv90365ny2) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/s/blnffu0pd7yzxarq3zc3w0jv90365ny2) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 9 minutes (tested on ibm_brisbane).*\n",
     "\n",
