--- a/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This notebook provides the fundamental concepts and implementation of the Quantum Fourier Transformation (QFT) and Quantum Phase Estimation (QPE).\n",
     "\n",
-    "Click [here](https://ibm.box.com/shared/static/srgnll6u8ame7gk186pkthq7erc7l6rw.zip) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/srgnll6u8ame7gk186pkthq7erc7l6rw.zip) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 7 seconds.*\n",
     "\n",
