--- a/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Yukio Kawashima (May 30, 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/s/kzzsmxhw38vph1ioohczaet53euwi310) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/s/kzzsmxhw38vph1ioohczaet53euwi310) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 7 seconds.*\n",
     "\n",
