--- a/learning/courses/utility-scale-quantum-computing/utility-i.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-i.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Tamiya Onodera (5 July 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/shared/static/k38xhk5yaqy9b3gjdmu0ynhnd9i4c3e1.zip) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/k38xhk5yaqy9b3gjdmu0ynhnd9i4c3e1.zip) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 45 seconds.*\n",
     "\n",
